scrollbar width fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,7 +91,8 @@
     }
 
     ::-webkit-scrollbar {
-        min-width: 100%;
+        width: min(0.5rem, 0.5vw);
+        /* min-width: 100%; */
     }
 
     ::-webkit-scrollbar-track {
